demo works with code

--- a/db/algo_words.html
+++ b/db/algo_words.html
@@ -1,5 +1,5 @@
-<pre><span class="cursor cursor-done">Loop over all elements</span>
-  <span class="cursor cursor-current">Set element to current minimum</span>
+<pre><span class="cursor cursor-current" id="cur-s1 cur-s2 cur-s3">Loop over all elements</span>
+  <span class="cursor">Set element to current minimum</span>
   <span class="cursor">Loop over remaining elements</span>
     <span class="cursor">If the element is smaller than the current minimum</span>
       <span class="cursor">Replace the minimum with the current element</span>
