--- a/test/js.html
+++ b/test/js.html
@@ -5,19 +5,90 @@
 <title>Insert title here</title>
 </head>
 <body>
-
-<div onclick="step1()">Hello world!</div>
-
-
-<script type="text/javascript">
-	var a = new Array(7, 3, 2, 1, 9, 6, 5, 4, 8);
-	var len = a.length;
-	a.
 	
-	function step1() {
-		alert(len);
-	}
-</script>
+	<button onclick="loop()">&gt;</button>
+	<div id="asd" title="EMPTY">ASD</div>
+
+	<script type="text/javascript">
+		var a = new Array(7, 3, 2, 1, 9, 6, 5, 4, 8);
+		var len = a.length;
+		var i, min, j, t;
+		
+		var state = 0;
+
+		function loop() {
+			switch (state) {
+			case 0:
+				i = 0;
+				state = 1;
+				break;
+
+			case 1:
+				if (i < len) {
+					state = 2;
+				} else {
+					state = 3;
+				}
+				break;
+
+			case 2:
+				min = i;
+				state = 4;
+				break;
+
+			case 3:
+				alert("DONE!");
+				break;
+
+			case 4:
+				j = i + 1;
+				state = 5;
+				break;
+
+			case 5:
+				if (j < len) {
+					state = 6;
+				} else {
+					state = 7;
+				}
+				break;
+
+			case 6:
+				if (a[j] < a[min]) {
+					state = 8;
+				} else {
+					state = 9;
+				}
+				break;
+
+			case 7:
+				t = a[min];
+				a[min] = a[i];
+				a[i] = t;
+				state = 10;
+				break;
+
+			case 8:
+				min = j;
+				state = 9;
+				break;
+
+			case 9:
+				j++;
+				state = 5;
+				break;
+
+			case 10:
+				i++;
+				state = 1;
+				break;
+
+			default:
+				alert("ERROR");
+
+			}
+		}
+	</script>
 
 </body>
 </html>
