demo works in both directions, view.php finished

--- a/db/algo_words.html
+++ b/db/algo_words.html
@@ -1,6 +1,6 @@
-<pre><span class="cursor cursor-current" id="cur-s1 cur-s2 cur-s3">Loop over all elements</span>
-  <span class="cursor">Set element to current minimum</span>
-  <span class="cursor">Loop over remaining elements</span>
-    <span class="cursor">If the element is smaller than the current minimum</span>
-      <span class="cursor">Replace the minimum with the current element</span>
-  <span class="cursor">Replace the current element with the found minimum</span></pre>
+<pre><span class="cursor cursor-current cur-s0 cur-s1 cur-s2">Loop over all elements</span>
+  <span class="cursor cur-s3">Set element to current minimum</span>
+  <span class="cursor cur-s4 cur-s5 cur-s6">Loop over remaining elements</span>
+    <span class="cursor cur-s7">If the element is smaller than the current minimum</span>
+      <span class="cursor cur-s8r">Replace the minimum with the current element</span>
+  <span class="cursor cur-s9 cur-s10 cur-s11">Replace the current element with the found minimum</span></pre>
